eclipse-workspace/Surya Dev Org/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Interface_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speaker_Bio__c</fullName>
        <label>Speaker Bio</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZTS_US_Job_Function__c</fullName>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ZTS_US_Profession__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Account Contact</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Admin Asst/Recep.</fullName>
                </value>
                <value>
                    <fullName>Ag Extension</fullName>
                </value>
                <value>
                    <fullName>AI Technician/Breeder</fullName>
                </value>
                <value>
                    <fullName>Animal Welfare</fullName>
                </value>
                <value>
                    <fullName>Area Sales</fullName>
                </value>
                <value>
                    <fullName>Ass&apos;t Prod MGR</fullName>
                </value>
                <value>
                    <fullName>Associate Dean</fullName>
                </value>
                <value>
                    <fullName>Associate Vet</fullName>
                </value>
                <value>
                    <fullName>Barn/Service Mgr</fullName>
                </value>
                <value>
                    <fullName>Breeder Mgr</fullName>
                </value>
                <value>
                    <fullName>Buyer/Procurement</fullName>
                </value>
                <value>
                    <fullName>Buyer/Purchasing</fullName>
                </value>
                <value>
                    <fullName>Calf/Heifer Mgr.</fullName>
                </value>
                <value>
                    <fullName>Cattleman Science</fullName>
                </value>
                <value>
                    <fullName>CEO/President</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>Clinical Faculty</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Complex/General Mgr/Div Mgr</fullName>
                </value>
                <value>
                    <fullName>Consulting Nutritionist</fullName>
                </value>
                <value>
                    <fullName>Consulting Vet</fullName>
                </value>
                <value>
                    <fullName>Contract Grower</fullName>
                </value>
                <value>
                    <fullName>COO/VP</fullName>
                </value>
                <value>
                    <fullName>Customer Service Contact</fullName>
                </value>
                <value>
                    <fullName>Dean</fullName>
                </value>
                <value>
                    <fullName>Department Head</fullName>
                </value>
                <value>
                    <fullName>Diagnostician</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZTS_US_Profession__c</fullName>
        <label>Profession</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Academia</fullName>
                </value>
                <value>
                    <fullName>Account Contact</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Customer Service Contact</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Executive Leadership</fullName>
                </value>
                <value>
                    <fullName>Manager/Sr. Manager</fullName>
                </value>
                <value>
                    <fullName>Nutritionist</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Technician</fullName>
                </value>
                <value>
                    <fullName>Veterinarian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>